--- a/tconfig.json
+++ b/tconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2019",                              // ✅ FIXES your issue
+    "target": "es2019",                              
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
