--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+    "jsonrepair": "^4.1.0"
   },
 "devDependencies": {
   "autoprefixer": "^10.4.15",
