--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
-  "vercel-build": "next build"
-},
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "vercel-build": "next build"
+  },
   "dependencies": {
     "axios": "^1.6.8",
+    "jsonrepair": "^4.1.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0"
-    "jsonrepair": "^4.1.0"
   },
-"devDependencies": {
-  "autoprefixer": "^10.4.15",
-  "postcss": "^8.4.24",
-  "tailwindcss": "^3.3.3",
-  "typescript": "^5.2.2",
-  "@types/react": "^18.0.28",
-  "@types/node": "^18.0.0"
-}
+  "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
+    "@types/react": "^18.0.28",
+    "@types/node": "^18.0.0"
+  }
 }
